fixed overflow issue

--- a/css/main_styles.css
+++ b/css/main_styles.css
@@ -11,7 +11,7 @@ body {
     font-family: "Orbitron", sans-serif;
     line-height: 1.6;
     background-color: #1a1a1a;
-    overflow: hidden; 
+    overflow: auto; 
     color: #333;
     margin: 0;
     padding: 0;
